css fixes. hover on mobile

--- a/css/styles.css
+++ b/css/styles.css
@@ -704,6 +704,9 @@ path.selected{
        width: 100%;
        margin-bottom: 1em;
     }
+    .locator .chart-title{
+        width: 95%;
+    }
 }
 
 @media(max-width: 400px){
